accomplished making actual costs, changed object grid view